add meta data linked html with css and JS docs

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="veiwport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="description" content="learn how to mountainbike in 60 seconds video tutorial">
+    <meta name="keywords" content="mtb, mountainbike, skills, how, to, jump, ride, corner, wheelie, drop">
+    <meta name="author" content="PeterHolmqvist">
+    <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/281/281568.png">
+    <title>How to MTB in 60sec</title>
+
 </head>
 <body>
     <h1>hello world</h1>
 </body>
+<script src="assets/javascript.js"></script>
 </html>
