add hero video loop to main page and styled to fit

--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
     <meta name="description" content="learn how to mountainbike in 60 seconds video tutorial">
     <meta name="keywords" content="mtb, mountainbike, skills, how, to, jump, ride, corner, wheelie, drop">
     <meta name="author" content="PeterHolmqvist">
+
+    <!--mountain theme favicon from flaticon.com-->
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/281/281568.png">
+
     <title>How to MTB in 60sec</title>
 
 </head>
+
 <body>
+    <!--The video loop for background is fom pexels.com-->
+    <video id="loopvid" autoplay muted loop type="mp4" poster="https://www.pexels.com/photo/silhouette-photography-of-biker-on-top-of-hill-1619299/">
+        <source src="assets/media/loopvid.mp4">
+    </video>
+
     <h1>hello world</h1>
 </body>
+
 <script src="assets/javascript.js"></script>
+
 </html>
