--- a/page-2.html
+++ b/page-2.html
@@ -14,10 +14,56 @@
 
 </head>
 <body>
+    <div class="viddivs" id="stoppie">
+        <h2>How to do a stoppie</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4s2QqSla2CA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                  
+    </div>
+    
+    <div id="Berms">
+        <h2>how to ride berms</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/JQEx9wxIoBY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
-   
+    <div id="drops">
+        <h2>how to ride drop offs</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/y0ndQ2exPYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
-    <h1>hello world</h1>
+    <div id="skid">
+        <h2>how to skid</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fq3Sg7aIeDE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="manual">
+        <h2>how to manual</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/l0Qy8iEc-dQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="climbs">
+        <h2>how to ride steep climbs</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/khs-nvWinlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="corners">
+        <h2>how to corner</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lNVBnPQAo8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="bunnyhop">
+        <h2>how to bunny hop</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/HvPl1lt-RCE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="pressure">
+        <h2> how to set tyre pressure</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/oPH7Qz9Xkxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="wheelie">
+        <h2>how to wheelie</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Nx6rnyxMMd0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    
 </body>
 <script src="assets/javascript.js"></script>
 </html>
