add responsive navbar

--- a/index.html
+++ b/index.html
@@ -12,12 +12,25 @@
     <!--mountain theme favicon from flaticon.com-->
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/281/281568.png">
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <title>How to MTB in 60sec</title>
 
 </head>
 
 <body>
+
+    <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>       
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+         <i class="fa fa-bars"></i>
+        </a>
+    </div>
 
 
     <!--The video loop for background is fom pexels.com-->
