--- a/page-2.html
+++ b/page-2.html
@@ -8,12 +8,31 @@
     <meta name="description" content="learn how to mountainbike in 60 seconds video tutorial">
     <meta name="keywords" content="mtb, mountainbike, skills, how, to, jump, ride, corner, wheelie, drop">
     <meta name="author" content="PeterHolmqvist">
+    
+    <!--mountain theme favicon from flaticon.com-->
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/281/281568.png">
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>How to MTB in 60sec</title>
 
 </head>
 <body>
+
+<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+        </a>
+</div>
+
     <div class="viddivs" id="stoppie">
         <h2>How to do a stoppie</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/4s2QqSla2CA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                  
