--- a/page-3.html
+++ b/page-3.html
@@ -8,12 +8,29 @@
     <meta name="description" content="learn how to mountainbike in 60 seconds video tutorial">
     <meta name="keywords" content="mtb, mountainbike, skills, how, to, jump, ride, corner, wheelie, drop">
     <meta name="author" content="PeterHolmqvist">
+    
+    <!--mountain theme favicon from flaticon.com-->
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/281/281568.png">
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <title>How to MTB in 60sec</title>
 
 </head>
 <body>
+
+
+
+    <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
     <h1>hello world</h1>
 </body>
 <script src="assets/javascript.js"></script>
