add some styling to navbar and header

--- a/page-2.html
+++ b/page-2.html
@@ -23,15 +23,24 @@
 <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<nav>
     <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="page-2.html">Videos</a>
+        <a href="page-3.html">Contact</a>
         <a href="#about">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
         </a>
-</div>
+    </div>
+</nav> 
+
+<header>
+    <div id="page-2-header">
+        <h1>Learn how to ride mountainbike in 60 seconds</h1>
+    </div>
+</header>
+    
 
     <div class="viddivs" id="stoppie">
         <h2>How to do a stoppie</h2>
