--- a/page-3.html
+++ b/page-3.html
@@ -20,18 +20,33 @@
 </head>
 <body>
 
-
-
+<nav>
     <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="page-2.html">Videos</a>
+        <a href="page-3.html">Contact</a>
         <a href="#about">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
-    <h1>hello world</h1>
+        <i class="fa fa-bars"></i>
+        </a>
+    </div>
+</nav> 
+
+<header>
+    <h1>contact</h1>
+</header>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2035.3294526863276!2d18.05215691562782!3d59.327453318215646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f77df9092cde9%3A0xaeafc90d911394c0!2sStockholms%20stadshus!5e0!3m2!1ssv!2sse!4v1661415790546!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+<footer>
+    <span>Find us on:</span>
+    <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+    <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+    <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+
+		<p>Copyright © Love Riding 2022</p>
+</footer>
+
 </body>
 <script src="assets/javascript.js"></script>
 </html>
