--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 </head>
 
 <body>
-
-    <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>       
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-         <i class="fa fa-bars"></i>
-        </a>
-    </div>
+    <nav>
+        <!--nav bar from w3schools.com with some mods-->
+        <div class="topnav" id="myTopnav">
+            <a href="index.html" class="active">Home</a>
+            <a href="page-2.html">Videos</a>
+            <a href="page-3.html">Contact</a>
+            <a href="#about">About</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+            </a>
+        </div>
+    </nav>      
 
 
     <!--The video loop for background is fom pexels.com-->
@@ -38,7 +40,12 @@
         <source src="assets/media/loopvid.mp4">
     </video>
 
-    <h1>hello world</h1>
+    <header>
+        <div id="page-1-header">
+            <h1>Learn how to ride mountainbike in 60 seconds</h1>
+        </div>
+    </header>
+
 </body>
 
 <script src="assets/javascript.js"></script>
