add main page article and transparent background.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,23 @@
 
     <header>
         <div id="page-1-header">
-            <h1>Learn how to ride mountainbike in 60 seconds</h1>
+            <h1>master you mountainbike skills in 60 sec</h1>
         </div>
     </header>
 
+    
+    <article>
+        <h2>Learn the essential mountainbike skills in 60 second video clips</h2>
+        <h3>Is it time to ride that scary drop on your home trail that you been dreading? want to make that 
+            steep technical climb? Or just want to improve your cornering skills in geneleral?
+            Everybody that have some exeprience riding, or at least of Wiping out know that overthinkingh is 
+            probably the most common reason to failing while trying to overcome an obstacle.
+            Thats why we created this video tutorial site that consits of a playlist from GMBN 
+            where they explain in easy digestable, 60 seconds segments each skill that you need to be a master. 
+            Less is more.  We also braked down each skill into easy a step-by-step guides. GLHF!  
+        </h3>
+    </article>
+    
 </body>
 
 <script src="assets/javascript.js"></script>
