add footer  contact page and maps

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <header>
         <div id="page-1-header">
-            <h1>master you mountainbike skills in 60 sec</h1>
+            <h1>master your mountainbike skills in 60 sec</h1>
         </div>
     </header>
 
@@ -58,7 +58,79 @@
             Less is more.  We also braked down each skill into easy a step-by-step guides. GLHF!  
         </h3>
     </article>
+
+    <!--image from artist Danny Bor pexels.com-->
+    <img src="assets/media/pexels-danny-bor-9994208.jpg" alt="guy_riding_bike">
     
+    <header>
+    <div id="page-2-header">
+        <h1>Learn how to ride mountainbike in 60 seconds</h1>
+    </div>
+    </header>
+
+
+    <div class="viddivs" id="stoppie">
+        <h2>How to do a stoppie</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4s2QqSla2CA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                  
+    </div>
+
+    <div id="Berms">
+        <h2>how to ride berms</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/JQEx9wxIoBY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="drops">
+        <h2>how to ride drop offs</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/y0ndQ2exPYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="skid">
+        <h2>how to skid</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fq3Sg7aIeDE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="manual">
+        <h2>how to manual</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/l0Qy8iEc-dQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="climbs">
+        <h2>how to ride steep climbs</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/khs-nvWinlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="corners">
+        <h2>how to corner</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lNVBnPQAo8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="bunnyhop">
+        <h2>how to bunny hop</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/HvPl1lt-RCE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="pressure">
+        <h2> how to set tyre pressure</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/oPH7Qz9Xkxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div id="wheelie">
+        <h2>how to wheelie</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Nx6rnyxMMd0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2035.3294526863276!2d18.05215691562782!3d59.327453318215646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f77df9092cde9%3A0xaeafc90d911394c0!2sStockholms%20stadshus!5e0!3m2!1ssv!2sse!4v1661415790546!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+<footer>
+    <span>Find us on:</span>
+    <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+    <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+    <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+
+		<p>Copyright © Love Riding 2022</p>
+</footer>
+
+
 </body>
 
 <script src="assets/javascript.js"></script>
