readme update and some style adjustment

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 
     
     <br>
+    <div class="adresses">
     <div id="phone">
         <span style="font-weight:bold">Phone</span><br>
         <span>+46736756609</span>
@@ -144,7 +145,8 @@
     <label for="email">email</label>
     <input type="email">
     <input type="submit">
-</div>    
+</div>  
+</div>  
 
 
 
